objects/Position__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Galapagos Island</fullName>
            </value>
            <value>
                <fullName>New york</fullName>
            </value>
            <value>
                <fullName>london</fullName>
            </value>
            <value>
                <fullName>switzerland</fullName>
            </value>
            <value>
                <fullName>sydney</fullName>
            </value>
            <value>
                <fullName>Beijing</fullName>
            </value>
            <value>
                <fullName>Toronto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>