objects/Position__c/fields/Education_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Education_Requirement__c</fullName>
    <label>Education Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bachelor&apos;s</fullName>
            </value>
            <value>
                <fullName>Degree</fullName>
            </value>
            <value>
                <fullName>Doctorate</fullName>
            </value>
            <value>
                <fullName>Master&apos;s</fullName>
            </value>
            <value>
                <fullName>Phd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>