objects/Position__c/fields/Programming_Languages__c.field-meta.xml
<CustomField>
    <fullName>Programming_Languages__c</fullName>
    <label>Programming Languages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>C++</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>