objects/Position__c/recordTypes/Non_Technical_Position_RecordType.recordType-meta.xml
<RecordType>
    <fullName>Non_Technical_Position_RecordType</fullName>
    <active>true</active>
    <label>Non Technical Position RecordType</label>
</RecordType>