objects/Position__c/recordTypes/Technical_Position_RecordType.recordType-meta.xml
<RecordType>
    <fullName>Technical_Position_RecordType</fullName>
    <active>true</active>
    <label>Technical Position RecordType</label>
</RecordType>